# pixelator

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs  processor.rs  svg_generator.rs  tests.rs
