[package]
name = "pixelator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Convert images to SVG circle art for poster printing"
license = "MIT"

[lib]
name = "pixelator"
path = "src/lib.rs"

[[bin]]
name = "pixelator"
path = "src/main.rs"

[dependencies]
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
svg = "0.13"
anyhow = "1.0"
thiserror = "1.0"
